@@ -5,6 +5,15 @@ File.: Host
 Desc.: Implemented a new feature that allows to quit at next restore point update (and disable it)
 Issue: 10
 
+Type.: Bug
+File.: Host
+Desc.: Fixed a bug in combination of --restore and a user immediately aborting the session after restart
+Trac.: 684
+
+Type.: Change
+File.: Docs
+Desc.: Updated docs/readme.txt -- Starting with v2.01 OpenCL 2.00 is required; we need Catalyst 15.7 or higher
+
 * changes v2.00 -> v2.01:
 
 Type.: Bug
